--- a/common test1/Common Test1.ipynb
+++ b/common test1/Common Test1.ipynb
@@ -246,7 +246,7 @@
     "\n",
     "Many tasks have been benefit from transfer learning. Transfer learning can speed up the time of training models by reusing modules or parts of pretrained models. This not only speeds up the model training process, but also improves the training effect. By transfer learning, we use the pretrained ResNet18 on ImageNet as backbone. The we add a three layers mlp as a simple classifier. The model architecture look like this:\n",
     "\n",
-    "<img src=\"./img/res arch.png\" max-witdh=\"50%\" max-height=\"50%\"/>\n",
+    "<img src=\"./res_arch.png\" max-witdh=\"50%\" max-height=\"50%\"/>\n",
     "\n",
     "**[1]** Deep Learning the Morphology of Dark Matter Substructure"
    ]
