--- a/common test1/Common Test1.ipynb
+++ b/common test1/Common Test1.ipynb
@@ -493,10 +493,29 @@
     "        transforms.ToTensor(),\n",
     "        transforms.RandomAffine(degrees=(0, 180), translate=(0.2, 0.2)),\n",
     "        transforms.Resize((150, 150))\n",
-    "    ])\n",
+    "])\n",
     "\n",
     "train_set = MyData(traindesc_dir, trainset_dir, transform=train_transform)\n",
     "train_loader = DataLoader(train_set, batch_size=cfg.batch_size, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fc073e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testset_dir = \"./dataset/val\"\n",
+    "testdesc_dir = \"./dataset/val description.csv\"\n",
+    "\n",
+    "test_tranform = transforms.Compose([\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Resize((150, 150))\n",
+    "])\n",
+    "\n",
+    "test_set = MyData(testdesc_dir, testset_dir, transform=test_tranform)\n",
+    "test_loader = DataLoader(test_set, batch_size=cfg.batch_size)"
    ]
   },
   {
@@ -683,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.0"
   },
   "toc": {
    "base_numbering": 1,
